--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: 'Space Grotesk';
-    src: url('SpaceGrotesk-Medium.woff2') format('woff2');
+    src: url('../fonts/SpaceGrotesk-Medium.woff2') format('woff2');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
