--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -1,44 +1,40 @@
-@mixin fluid-text ($max: 48, $min: 16) {
-    font-size: clamp(#{$min}px, #{$max / 1140 * 100}vw, #{$max}px);
+@mixin fluid-text($max: 16, $min: 48) {
+  font-size: clmap(#{$min}px, #{$max * 1440 / 100}vw, #{$max}px);
 }
 
-@mixin link-reset {
-    color: inherit;
-
-    &,
-    &:hover {
-        text-decoration: none;
-    }
+@mixin recet-link {
+  color: inherit;
+  &,
+  &:hover {
+    text-decoration: none;
+  }
 }
 
-@mixin recet-button {
-    padding: 0;
-    background-color: transparent;
-    border: none;
+@mixin reset-button {
+  padding: 0;
+  background: transparent;
+  border: none;
 }
 
-@mixin flex-center ($isInline: false) {
-    @if $isInline {
-        display: inline-flex;
-    }
+@mixin flex-center($isInline: false) {
+  @if $isInline {
+    display: inline-flex;
+  } @else {
+    display: flex;
+  }
 
-    @else {
-        display: flex;
-    }
-
-    justify-content: center;
-    align-items: center;
-
+  justify-content: center;
+  align-items: center;
 }
 
 @mixin abc-center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    translate: -50% -50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
 }
 
-@mixin square ($size) {
-    width: $size;
-    aspect-ratio: 1;
+@mixin square($size) {
+  width: $size;
+  aspect-ratio: 1;
 }
