--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,28 +1,27 @@
 :root {
-    --color-dark: #191A23;
-    --color-dark-alt: #292A32;
-    --coror-white: #FFFFFF;
-    --color-accent: #B9FF66;
-    --color-gray: #F3F3F3;
-    --color-gray-alt: #898989;
+  --color-dark: #191a23;
+  --color-dark-alt: #292a32;
+  --color-white: #ffffff;
+  --color-accent: #b9ff66;
+  --color-gray: #f3f3f3;
+  --color-gray-alt: #898989;
 
-    --border: 1px solid var(--color-dark);
-    --border-radius: 14px;
-    --border-radius-large: 45px;
-    --border-radius-small: 7px;
+  --border: 1px solid var(--color-dark);
+  --border-radius: 14px;
+  --border-radius-large: 45px;
+  --border-radius-small: 7px;
 
-    --shadow: 0 5px 0 0 var(--color-dark);
+  --shadow: 0 5px 0 0 var(--color-dark);
 
-    --font-size-base: 'Space Grotesk', sans-serif;
+  --font-family-base: "Space Grotesk", sans-serif;
 
-    --container-width: 1240px;
-    --container-padding-x: 20px;
+  --container-width: 1240px;
+  --container-padding-x: 20px;
 
-    --section-padding-y: 70px;
+  --section-padding-y: 70px;
 
-    --input-height: 68px;
-    --button-height: 59px;
+  --input-height: 68px;
+  --button-height: 59px;
 
-    --transition-duration: 0.2s;
-
+  --transition-duration: 0.2s;
 }
