--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -1,5 +1,5 @@
 @mixin fluid-text($max: 16, $min: 48) {
-  font-size: clmap(#{$min}px, #{$max * 1440 / 100}vw, #{$max}px);
+  font-size: clamp(#{$min}px, #{$max * 1440 / 100}vw, #{$max}px);
 }
 
 @mixin recet-link {
