--- a/styles.css
+++ b/styles.css
@@ -219,6 +219,16 @@ svg * {
   --button-height: 59px;
   --transition-duration: 0.2s;
 }
+@media (max-width: 1280px) {
+  :root {
+    --section-padding-y: 50px;
+  }
+}
+@media (max-width: 767px) {
+  :root {
+    --section-padding-y: 30px;
+  }
+}
 
 @font-face {
   font-family: "Space Grotesk";
@@ -234,6 +244,51 @@ svg * {
   font-style: normal;
   font-display: swap;
 }
+body {
+  font-size: clamp(16px, 259.2vw, 18px);
+  font-family: var(--font-family-base);
+  font-weight: 400;
+  line-height: 1.28;
+  color: var(--color-dark);
+  border-color: var(--color-white);
+}
+
+a,
+button,
+input,
+textarea,
+svg * {
+  transition-duration: var(--transition-duration);
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-weight: 500;
+}
+
+h1 {
+  font-size: clamp(43px, 864vw, 60px);
+}
+
+h2 {
+  font-size: clamp(36px, 576vw, 40px);
+}
+
+h3 {
+  font-size: clamp(26px, 432vw, 30px);
+}
+
+h4 {
+  font-size: clamp(18px, 288vw, 20px);
+}
+
 .container {
   margin-inline: auto;
   max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
@@ -273,51 +328,6 @@ svg * {
   .visible-mobile {
     display: block !important;
   }
-}
-
-body {
-  font-size: clmap(16px, 259.2vw, 18px);
-  font-family: var(--font-family-base);
-  font-weight: 400;
-  line-height: 1.28;
-  color: var(--color-dark);
-  border-color: var(--color-white);
-}
-
-a,
-button,
-input,
-textarea,
-svg * {
-  transition-duration: var(--transition-duration);
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-h1,
-h2,
-h3,
-h4 {
-  font-weight: 500;
-}
-
-h1 {
-  font-size: clmap(43px, 864vw, 60px);
-}
-
-h2 {
-  font-size: clmap(36px, 576vw, 40px);
-}
-
-h3 {
-  font-size: clmap(26px, 432vw, 30px);
-}
-
-h4 {
-  font-size: clmap(18px, 288vw, 20px);
 }
 
 .burger-button {
@@ -548,6 +558,119 @@ h4 {
   min-height: 80vh;
   flex-direction: column;
   row-gap: 30px;
+}
+
+.section {
+  padding-block: var(--section-padding-y);
+}
+.section--hidden-x {
+  overflow-x: hidden;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  row-gap: var(--section-padding-y);
+}
+@media (max-width: 767px) {
+  .hero {
+    row-gap: 60px;
+  }
+}
+.hero__main {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  column-gap: 30px;
+}
+@media (max-width: 767px) {
+  .hero__main {
+    flex-direction: column;
+  }
+}
+.hero__body {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  max-width: 531px;
+  row-gap: 30px;
+}
+@media (max-width: 767px) {
+  .hero__body {
+    display: contents;
+  }
+}
+@media (max-width: 767px) {
+  .hero__title {
+    order: -2;
+    margin-bottom: 10px;
+  }
+}
+.hero__description {
+  font-size: 20px;
+  line-height: 1.4;
+}
+@media (max-width: 767px) {
+  .hero__description {
+    margin-bottom: 40px;
+  }
+}
+@media (max-width: 767px) {
+  .hero__button {
+    width: 100%;
+    max-width: 390px;
+    margin-inline: auto;
+  }
+}
+.hero__partners-list {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 37px;
+}
+@media (max-width: 1023px) {
+  .hero__partners-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 20px;
+  }
+}
+@media (max-width: 480px) {
+  .hero__partners-list {
+    --heroPartnersWidthOffsetX: 60px;
+    width: calc(100vw + var(--heroPartnersWidthOffsetX) * 2);
+    margin-left: calc((var(--heroPartnersWidthOffsetX) + var(--container-padding-x)) * -1);
+    column-gap: 0;
+  }
+}
+@media (max-width: 1023px) {
+  .hero__partners-item {
+    display: flex;
+    justify-content: center;
+  }
+}
+@media (max-width: 480px) {
+  .hero__partners-item {
+    display: flex;
+    justify-content: start;
+  }
+  .hero__partners-item:nth-child(-n+3) {
+    justify-content: end;
+  }
+}
+.hero__partners-image {
+  filter: grayscale(1);
+}
+.hero__image {
+  max-width: 40%;
+  height: auto;
+}
+@media (max-width: 767px) {
+  .hero__image {
+    order: -1;
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 20px;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
