--- a/styles.css
+++ b/styles.css
@@ -363,6 +363,46 @@ h4 {
   box-shadow: 0 6px var(--color-dark), 0 -6px var(--color-dark);
 }
 
+.grid {
+  --gridColumns: 1;
+  display: grid;
+  grid-template-columns: repeat(var(--gridColumns), 1fr);
+  gap: 40px;
+}
+.grid--2 {
+  --gridColumns: 2;
+}
+.grid--3 {
+  --gridColumns: 3;
+}
+.grid--4 {
+  --gridColumns: 4;
+}
+.grid--5 {
+  --gridColumns: 5;
+}
+.grid--6 {
+  --gridColumns: 6;
+}
+.grid--7 {
+  --gridColumns: 7;
+}
+.grid--8 {
+  --gridColumns: 8;
+}
+.grid--9 {
+  --gridColumns: 9;
+}
+.grid--10 {
+  --gridColumns: 10;
+}
+.grid--11 {
+  --gridColumns: 11;
+}
+.grid--12 {
+  --gridColumns: 12;
+}
+
 .button {
   padding: 0;
   background: transparent;
@@ -566,6 +606,17 @@ h4 {
 .section--hidden-x {
   overflow-x: hidden;
 }
+.section__header {
+  display: flex;
+  align-items: center;
+  column-gap: 40px;
+}
+.section__header:not(:last-child) {
+  margin-bottom: 80px;
+}
+.section__description {
+  max-width: 580px;
+}
 
 .hero {
   display: flex;
@@ -671,6 +722,112 @@ h4 {
     max-width: 100%;
     margin-bottom: 20px;
   }
+}
+
+.services {
+  margin-bottom: 100px;
+}
+.services__list:not(:last-child) {
+  margin-bottom: 100px;
+}
+
+.service-card {
+  min-height: 310px;
+  padding: 50px;
+  display: flex;
+  justify-content: space-between;
+  column-gap: 30px;
+  background-color: var(--color-gray);
+  border-radius: var(--border-radius-large);
+  box-shadow: 0 5px 0 0 var(--color-dark);
+}
+.service-card--accent-bg {
+  background-color: var(--color-accent);
+}
+.service-card--dark-bg {
+  background-color: var(--color-dark);
+}
+.service-card__body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  row-gap: 30px;
+}
+.service-card__title {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+.service-card__image {
+  align-self: center;
+}
+.service-card__link {
+  --serviceCardLinkIconColor: var(--color-accent);
+  display: flex;
+  align-items: center;
+  column-gap: 15px;
+  font-size: 20px;
+}
+@media (hover: hover) {
+  .service-card__link:hover {
+    opacity: 0.7;
+  }
+}
+@media (hover: none) {
+  .service-card__link:active {
+    opacity: 0.7;
+  }
+}
+.service-card__link--light {
+  --serviceCardLinkIconColor: var(--color-dark);
+  color: var(--color-white);
+}
+.service-card__link-icon-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 41px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background-color: currentColor;
+}
+.service-card__link-icon-wrapper svg {
+  color: var(--serviceCardLinkIconColor);
+}
+
+.banner {
+  --bannerImageOffsetY: 24px;
+  padding-block: var(--bannerImageOffsetY);
+}
+.banner__inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: var(--color-gray);
+  border-radius: var(--border-radius-large);
+}
+.banner__body {
+  padding: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  row-gap: 26px;
+  justify-content: space-between;
+}
+.banner__image {
+  margin-block: calc(var(--bannerImageOffsetY) * -1);
+}
+.banner__description {
+  max-width: 500px;
+}
+
+.puddle-bg {
+  background-color: var(--color-accent);
+  border-radius: var(--border-radius-small);
+  padding-inline: 7px;
+}
+.puddle-bg--light {
+  background-color: var(--color-white);
 }
 
 /*# sourceMappingURL=styles.css.map */
