--- a/styles/blocks/_service-card.scss
+++ b/styles/blocks/_service-card.scss
@@ -8,6 +8,12 @@
   border-radius: var(--border-radius-large);
   box-shadow: 0 5px 0 0 var(--color-dark);
 
+  @include mobile {
+    display: grid;
+    grid-template-columns: auto auto;
+    row-gap: 27px;
+  }
+
   &--accent-bg {
     background-color: var(--color-accent);
   }
@@ -21,16 +27,33 @@
     flex-direction: column;
     justify-content: space-between;
     row-gap: 30px;
+
+    @include mobile {
+      display: contents;
+    }
   }
 
   &__title {
     display: flex;
     flex-direction: column;
     align-items: start;
+
+    @include mobile {
+      grid-column: 1 / -1;
+    }
   }
 
   &__image {
     align-self: center;
+
+    @include desktop {
+      max-width: 50%;
+      height: auto;
+    }
+
+    @include mobile {
+      max-width: 165px;
+    }
   }
 
   &__link {
@@ -40,6 +63,10 @@
     align-items: center;
     column-gap: 15px;
     font-size: 20px;
+
+    @include mobile {
+      align-self: end;
+    }
 
     @include hover {
       opacity: 0.7;
@@ -59,6 +86,12 @@
 
       svg {
         color: var(--serviceCardLinkIconColor);
+      }
+    }
+
+    &-label {
+      @include mobile {
+        @include visually-hidden;
       }
     }
   }
