--- a/styles/blocks/_services.scss
+++ b/styles/blocks/_services.scss
@@ -1,9 +1,11 @@
 .services {
-  margin-bottom: 100px;
-
   &__list {
     &:not(:last-child) {
       margin-bottom: 100px;
+
+      @include mobile {
+        margin-bottom: 70px;
+      }
     }
   }
 }
