--- a/styles/blocks/_section.scss
+++ b/styles/blocks/_section.scss
@@ -12,6 +12,17 @@
 
     &:not(:last-child) {
       margin-bottom: 80px;
+
+      @include mobile {
+        margin-bottom: 40px;
+      }
+    }
+
+    @include mobile {
+      flex-direction: column;
+      row-gap: 30px;
+      align-items: center;
+      text-align: center;
     }
   }
 
