--- a/styles.scss
+++ b/styles.scss
@@ -5,4 +5,4 @@
   "styles/blocks/button", "styles/blocks/header", "styles/blocks/cross-button",
   "styles/blocks/mobile-overlay", "styles/blocks/section", "styles/blocks/hero",
   "styles/blocks/services", "styles/blocks/service-card", "styles/blocks/banner",
-  "styles/blocks/puddle-bg";
+  "styles/blocks/puddle-bg", "styles/blocks/studies";
