--- a/styles.css
+++ b/styles.css
@@ -912,4 +912,44 @@ h4 {
   background-color: var(--color-white);
 }
 
+.studies {
+  --paddingInlineX: 64px;
+  padding: 70px 60px;
+  color: var(--color-white);
+  background-color: var(--color-dark);
+  border-radius: var(--border-radius-large);
+}
+.studies__list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+.studies__item {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+}
+.studies__item:not(:last-child) {
+  padding-right: var(--paddingInlineX);
+  border-right: 1px solid var(--color-white);
+}
+.studies__item:not(:first-child) {
+  padding-left: var(--paddingInlineX);
+}
+.studies__link {
+  display: inline-flex;
+  align-items: center;
+  column-gap: 15px;
+  color: var(--color-accent);
+}
+@media (hover: hover) {
+  .studies__link:hover {
+    opacity: 0.7;
+  }
+}
+@media (hover: none) {
+  .studies__link:active {
+    opacity: 0.7;
+  }
+}
+
 /*# sourceMappingURL=styles.css.map */
