--- a/styles.css
+++ b/styles.css
@@ -912,29 +912,6 @@ h4 {
   background-color: var(--color-white);
 }
 
-.studies {
-  --paddingInlineX: 64px;
-  padding: 70px 60px;
-  color: var(--color-white);
-  background-color: var(--color-dark);
-  border-radius: var(--border-radius-large);
-}
-.studies__list {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-}
-.studies__item {
-  display: flex;
-  flex-direction: column;
-  row-gap: 20px;
-}
-.studies__item:not(:last-child) {
-  padding-right: var(--paddingInlineX);
-  border-right: 1px solid var(--color-white);
-}
-.studies__item:not(:first-child) {
-  padding-left: var(--paddingInlineX);
-}
 .studies__link {
   display: inline-flex;
   align-items: center;
@@ -949,6 +926,56 @@ h4 {
 @media (hover: none) {
   .studies__link:active {
     opacity: 0.7;
+  }
+}
+@media (min-width: 768px) {
+  .studies {
+    --studiesItempaddingX: 15px;
+    padding: 40px;
+    color: var(--color-white);
+    background-color: var(--color-dark);
+    border-radius: var(--border-radius-large);
+  }
+  .studies__list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .studies__item {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+  }
+  .studies__item:not(:last-child) {
+    padding-right: var(--studiesItempaddingX);
+    border-right: 1px solid var(--color-white);
+  }
+  .studies__item:not(:first-child) {
+    padding-left: var(--studiesItempaddingX);
+  }
+}
+@media (min-width: 1024px) {
+  .studies {
+    --studiesItempaddingX: 64px;
+    padding: 70px 60px;
+  }
+}
+@media (max-width: 767px) {
+  .studies__list {
+    display: flex;
+    column-gap: 20px;
+    scroll-snap-type: x mandatory;
+    overflow-x: scroll;
+  }
+  .studies__item {
+    min-width: 350px;
+    padding: 42px 50px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+    color: var(--color-white);
+    background-color: var(--color-dark);
+    border-radius: var(--border-radius-large);
+    scroll-snap-align: start;
   }
 }
 
