--- a/styles/blocks/_studies.scss
+++ b/styles/blocks/_studies.scss
@@ -1,31 +1,4 @@
 .studies {
-  --paddingInlineX: 64px;
-
-  padding: 70px 60px;
-  color: var(--color-white);
-  background-color: var(--color-dark);
-  border-radius: var(--border-radius-large);
-
-  &__list {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-  }
-
-  &__item {
-    display: flex;
-    flex-direction: column;
-    row-gap: 20px;
-
-    &:not(:last-child) {
-      padding-right: var(--paddingInlineX);
-      border-right: 1px solid var(--color-white);
-    }
-
-    &:not(:first-child) {
-      padding-left: var(--paddingInlineX);
-    }
-  }
-
   &__link {
     display: inline-flex;
     align-items: center;
@@ -34,6 +7,59 @@
 
     @include hover {
       opacity: 0.7;
+    }
+  }
+  @include mobile-above {
+    --studiesItempaddingX: 15px;
+    padding: 40px;
+    color: var(--color-white);
+    background-color: var(--color-dark);
+    border-radius: var(--border-radius-large);
+
+    &__list {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    &__item {
+      display: flex;
+      flex-direction: column;
+      row-gap: 20px;
+
+      &:not(:last-child) {
+        padding-right: var(--studiesItempaddingX);
+        border-right: 1px solid var(--color-white);
+      }
+
+      &:not(:first-child) {
+        padding-left: var(--studiesItempaddingX);
+      }
+    }
+  }
+
+  @include tablet-above {
+    --studiesItempaddingX: 64px;
+
+    padding: 70px 60px;
+  }
+
+  @include mobile {
+    &__list {
+      display: flex;
+      column-gap: 20px;
+      scroll-snap-type: x mandatory;
+      overflow-x: scroll;
+    }
+    &__item {
+      min-width: 350px;
+      padding: 42px 50px;
+      display: flex;
+      flex-direction: column;
+      row-gap: 20px;
+      color: var(--color-white);
+      background-color: var(--color-dark);
+      border-radius: var(--border-radius-large);
+      scroll-snap-align: start;
     }
   }
 }
