--- a/styles.css
+++ b/styles.css
@@ -282,7 +282,7 @@ h2 {
 }
 
 h3 {
-  font-size: clamp(26px, 432vw, 30px);
+  font-size: clamp(18px, 432vw, 30px);
 }
 
 h4 {
@@ -976,6 +976,111 @@ h4 {
     background-color: var(--color-dark);
     border-radius: var(--border-radius-large);
     scroll-snap-align: start;
+  }
+}
+
+.process__list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+  counter-reset: custom-counter;
+  list-style: none;
+}
+.process__item {
+  counter-increment: custom-counter;
+}
+.process__accordion {
+  --indicatorVerticalRotate: 90deg;
+  padding: 40px 60px;
+  border-color: var(--color-gray);
+  border: var(--border);
+  border-radius: var(--border-radius-large);
+  box-shadow: var(--shadow);
+  cursor: pointer;
+  transition-duration: var(--transition-duration);
+}
+@media (hover: hover) {
+  .process__accordion:hover {
+    background-color: var(--color-accent);
+  }
+}
+@media (hover: none) {
+  .process__accordion:active {
+    background-color: var(--color-accent);
+  }
+}
+.process__accordion[open] {
+  --indicatorVerticalRotate: 0;
+  background-color: var(--color-accent);
+  transition-duration: var(--transition-duration);
+}
+@media (max-width: 767px) {
+  .process__accordion {
+    padding: 30px;
+  }
+}
+.process__accordion-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 50px;
+}
+.process__accordion-title {
+  display: inline-flex;
+  align-items: center;
+  column-gap: 19.5px;
+  user-select: none;
+}
+.process__accordion-title::before {
+  content: "0" counter(custom-counter);
+  font-size: 2em;
+}
+@media (max-width: 767px) {
+  .process__accordion-title {
+    font-size: 16px;
+  }
+}
+.process__accordion-indicator {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 58px;
+  aspect-ratio: 1;
+  position: relative;
+  background-color: var(--color-gray);
+  border: var(--border);
+  border-radius: 50%;
+  flex-shrink: 0;
+}
+.process__accordion-indicator::before, .process__accordion-indicator::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  content: "";
+  width: 40%;
+  height: 10%;
+  background-color: var(--color-dark);
+}
+.process__accordion-indicator::after {
+  rotate: var(--indicatorVerticalRotate);
+}
+@media (max-width: 767px) {
+  .process__accordion-indicator {
+    width: 30px;
+    aspect-ratio: 1;
+  }
+}
+.process__accordion-description {
+  padding-top: 30px;
+  margin-top: 30px;
+  border-top: var(--border);
+}
+@media (max-width: 767px) {
+  .process__accordion-description {
+    padding-top: 10px;
+    margin-top: 20px;
+    font-size: 12px;
   }
 }
 
