--- a/styles.scss
+++ b/styles.scss
@@ -6,4 +6,5 @@
   "styles/blocks/mobile-overlay", "styles/blocks/section", "styles/blocks/hero",
   "styles/blocks/services", "styles/blocks/service-card", "styles/blocks/banner",
   "styles/blocks/puddle-bg", "styles/blocks/studies", "styles/blocks/process",
-  "styles/blocks/team", "styles/blocks/team-card";
+  "styles/blocks/team", "styles/blocks/team-card", "styles/blocks/pagination",
+  "styles/blocks/review-card", "styles/blocks/reviews";
