--- a/styles.css
+++ b/styles.css
@@ -251,6 +251,7 @@ body {
   line-height: 1.28;
   color: var(--color-dark);
   border-color: var(--color-white);
+  overflow-x: hidden;
 }
 
 a,
@@ -1017,16 +1018,6 @@ h4,
   cursor: pointer;
   transition-duration: var(--transition-duration);
 }
-@media (hover: hover) {
-  .process__accordion:hover {
-    background-color: var(--color-accent);
-  }
-}
-@media (hover: none) {
-  .process__accordion:active {
-    background-color: var(--color-accent);
-  }
-}
 .process__accordion[open] {
   --indicatorVerticalRotate: 0;
   background-color: var(--color-accent);
@@ -1163,6 +1154,106 @@ h4,
   .team-card__body {
     --teamCardBodyMargin: 20px;
   }
+}
+
+.pagination {
+  align-self: center;
+}
+.pagination__button {
+  padding: 0;
+  background: transparent;
+  border: none;
+  width: 24px;
+  aspect-ratio: 1;
+  color: var(--color-white);
+}
+.pagination__button.is-current {
+  color: var(--color-accent);
+}
+
+.review-card {
+  --reviewCardCurrenWidth: 40px;
+  --reviewCardBodyPaddingLeft: 52px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 48px;
+}
+.review-card__body {
+  position: relative;
+  padding: 48px var(--reviewCardBodyPaddingLeft) 52px;
+  border: 1px solid var(--color-accent);
+  border-radius: var(--border-radius-large);
+}
+.review-card__body::after {
+  width: var(--reviewCardCurrenWidth);
+  aspect-ratio: 1;
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: var(--reviewCardBodyPaddingLeft);
+  border-bottom: inherit;
+  border-left: inherit;
+  background-color: var(--color-dark);
+  rotate: -45deg;
+  translate: 0 -50%;
+}
+.review-card__footer {
+  display: flex;
+  flex-direction: column;
+  padding-left: calc(var(--reviewCardBodyPaddingLeft) + var(--reviewCardCurrenWidth) / 2);
+}
+.review-card__name, .review-card__company {
+  font-style: normal;
+}
+.review-card__name {
+  color: var(--color-accent);
+}
+
+.reviews {
+  --reviewsSliderSlideWidth: 606px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 110px;
+  padding-top: 84px;
+  padding-bottom: 54px;
+  color: var(--color-white);
+  background-color: var(--color-dark);
+  border-radius: var(--border-radius-large);
+}
+.reviews__slider-list {
+  display: flex;
+  justify-content: center;
+  column-gap: 50px;
+  scroll-snap-type: x mandatory;
+  overflow-x: scroll;
+}
+.reviews__slider-item {
+  min-width: var(--reviewsSliderSlideWidth);
+  scroll-snap-align: start;
+}
+.reviews__actions {
+  width: 100%;
+  max-width: 564px;
+  margin-inline: auto;
+  display: flex;
+  justify-content: space-between;
+}
+.reviews__arrow-button {
+  padding: 0;
+  background: transparent;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 48px;
+  aspect-ratio: 1;
+}
+.reviews__arrow-button[disabled] {
+  cursor: no-drop;
+}
+.reviews__arrow-button svg {
+  width: 20px;
+  aspect-ratio: 1;
 }
 
 /*# sourceMappingURL=styles.css.map */
