--- a/styles.css
+++ b/styles.css
@@ -1178,6 +1178,12 @@ h4,
   flex-direction: column;
   row-gap: 48px;
 }
+@media (max-width: 1023px) {
+  .review-card {
+    --reviewCardCurrenWidth: 30px;
+    --reviewCardBodyPaddingLeft: 40px;
+  }
+}
 .review-card__body {
   position: relative;
   padding: 48px var(--reviewCardBodyPaddingLeft) 52px;
@@ -1219,13 +1225,30 @@ h4,
   color: var(--color-white);
   background-color: var(--color-dark);
   border-radius: var(--border-radius-large);
+  overflow-x: hidden;
+}
+@media (max-width: 1023px) {
+  .reviews {
+    --reviewsSliderSlideWidth: 303px;
+    padding: 30px;
+    row-gap: 48px;
+  }
 }
 .reviews__slider-list {
   display: flex;
-  justify-content: center;
   column-gap: 50px;
   scroll-snap-type: x mandatory;
   overflow-x: scroll;
+}
+@media (min-width: 1024px) {
+  .reviews__slider-list {
+    margin-left: calc(var(--reviewsSliderSlideWidth) / 2 * -1);
+  }
+}
+@media (max-width: 1023px) {
+  .reviews__slider-list {
+    column-gap: 30px;
+  }
 }
 .reviews__slider-item {
   min-width: var(--reviewsSliderSlideWidth);
