--- a/styles/blocks/_reviews.scss
+++ b/styles/blocks/_reviews.scss
@@ -9,14 +9,29 @@
   color: var(--color-white);
   background-color: var(--color-dark);
   border-radius: var(--border-radius-large);
+  overflow-x: hidden;
+
+  @include tablet {
+    --reviewsSliderSlideWidth: 303px;
+
+    padding: 30px;
+    row-gap: 48px;
+  }
 
   &__slider {
     &-list {
       display: flex;
-      justify-content: center;
       column-gap: 50px;
       scroll-snap-type: x mandatory;
       overflow-x: scroll;
+
+      @include tablet-above {
+        margin-left: calc(var(--reviewsSliderSlideWidth) / 2 * -1);
+      }
+
+      @include tablet {
+        column-gap: 30px;
+      }
     }
 
     &-item {
