--- a/styles.scss
+++ b/styles.scss
@@ -1,10 +1,12 @@
 @import "styles/normalize", "styles/mixins", "styles/media", "styles/variables",
   "styles/fonts", "styles/globals", "styles/utils";
 
-@import "styles/blocks/burger-button", "styles/blocks/grid",
-  "styles/blocks/button", "styles/blocks/header", "styles/blocks/cross-button",
+@import "styles/blocks/radio", "styles/blocks/radios", "styles/blocks/field",
+  "styles/blocks/burger-button", "styles/blocks/grid", "styles/blocks/button",
+  "styles/blocks/header", "styles/blocks/cross-button",
   "styles/blocks/mobile-overlay", "styles/blocks/section", "styles/blocks/hero",
   "styles/blocks/services", "styles/blocks/service-card", "styles/blocks/banner",
   "styles/blocks/puddle-bg", "styles/blocks/studies", "styles/blocks/process",
   "styles/blocks/team", "styles/blocks/team-card", "styles/blocks/pagination",
-  "styles/blocks/review-card", "styles/blocks/reviews";
+  "styles/blocks/review-card", "styles/blocks/reviews",
+  "styles/blocks/cotnact-us";
