--- a/styles.scss
+++ b/styles.scss
@@ -9,4 +9,5 @@
   "styles/blocks/puddle-bg", "styles/blocks/studies", "styles/blocks/process",
   "styles/blocks/team", "styles/blocks/team-card", "styles/blocks/pagination",
   "styles/blocks/review-card", "styles/blocks/reviews",
-  "styles/blocks/cotnact-us";
+  "styles/blocks/cotnact-us", "styles/blocks/soc1als",
+  "styles/blocks/subscribe-form", "styles/blocks/footer";
