--- a/styles.css
+++ b/styles.css
@@ -401,6 +401,20 @@ h4,
   background-color: var(--color-accent);
   border: var(--color-accent);
 }
+.field__input--dark {
+  padding-inline: 35px;
+  background-color: var(--color-dark-alt);
+  outline: none;
+  border: 1px solid var(--color-white);
+}
+.field__input--dark::placeholder {
+  color: var(--color-white);
+}
+.field__input--dark:focus {
+  color: var(--color-accent);
+  background-color: var(--color-dark);
+  border: var(--color-accent);
+}
 .field__textarea {
   height: 190px;
   resize: vertical;
@@ -529,6 +543,22 @@ h4,
 .button--transparent {
   color: var(--color-dark);
   background-color: transparent;
+}
+.button--accent {
+  color: var(--color-dark);
+  background-color: var(--color-accent);
+}
+@media (hover: hover) {
+  .button--accent:hover {
+    background-color: var(--color-dark);
+    color: var(--color-accent);
+  }
+}
+@media (hover: none) {
+  .button--accent:active {
+    background-color: var(--color-dark);
+    color: var(--color-accent);
+  }
 }
 
 .header {
@@ -1395,6 +1425,128 @@ h4,
 @media (max-width: 1023px) {
   .contact-us::after {
     display: none;
+  }
+}
+
+.soc1als__list {
+  display: flex;
+  column-gap: 20px;
+}
+.soc1als__link {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  aspect-ratio: 1;
+  color: var(--color-dark);
+  background-color: var(--color-white);
+  border-radius: 50%;
+}
+@media (hover: hover) {
+  .soc1als__link:hover {
+    background-color: var(--color-accent);
+  }
+}
+@media (hover: none) {
+  .soc1als__link:active {
+    background-color: var(--color-accent);
+  }
+}
+.soc1als__link svg {
+  width: 50%;
+  height: 50%;
+}
+
+.subscribe-form {
+  display: flex;
+  align-items: center;
+  column-gap: 50px;
+  padding: 58px 40px;
+  background-color: var(--color-dark-alt);
+  border-radius: var(--border-radius);
+}
+.subscribe-form__button {
+  height: var(--input-height);
+}
+
+.footer__inner {
+  display: flex;
+  flex-direction: column;
+  row-gap: 50px;
+  border-radius: var(--border-radius-large) var(--border-radius-large) 0 0;
+  padding: 55px 60px 50px;
+  background-color: var(--color-dark);
+  color: var(--color-white);
+}
+.footer__navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer__menu-list {
+  display: flex;
+  column-gap: 40px;
+}
+.footer__menu-link {
+  display: flex;
+  align-items: center;
+  height: 30px;
+  text-decoration: underline;
+}
+@media (hover: hover) {
+  .footer__menu-link:hover {
+    color: var(--color-accent);
+  }
+}
+@media (hover: none) {
+  .footer__menu-link:active {
+    color: var(--color-accent);
+  }
+}
+.footer__body {
+  display: flex;
+  column-gap: 30px;
+  justify-content: space-between;
+}
+.footer__contacts {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  row-gap: 27px;
+}
+.footer__contacts-title {
+  color: var(--color-dark);
+}
+.footer__contacts-body {
+  font-style: normal;
+}
+@media (hover: hover) {
+  .footer__contacts-body a:hover {
+    color: var(--color-accent);
+  }
+}
+@media (hover: none) {
+  .footer__contacts-body a:active {
+    color: var(--color-accent);
+  }
+}
+.footer__extra {
+  display: flex;
+  column-gap: 40px;
+  padding-top: 50px;
+  border-top: 1px solid var(--color-white);
+}
+.footer__privacy-policy-link {
+  text-decoration: underline;
+}
+@media (hover: hover) {
+  .footer__privacy-policy-link:hover {
+    color: var(--color-accent);
+  }
+}
+@media (hover: none) {
+  .footer__privacy-policy-link:active {
+    color: var(--color-accent);
   }
 }
 
