--- a/styles/blocks/_button.scss
+++ b/styles/blocks/_button.scss
@@ -19,4 +19,14 @@
     color: var(--color-dark);
     background-color: transparent;
   }
+
+  &--accent {
+    color: var(--color-dark);
+    background-color: var(--color-accent);
+
+    @include hover {
+      background-color: var(--color-dark);
+      color: var(--color-accent);
+    }
+  }
 }
